--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     function yesClicked() {
       card.innerHTML = `
         <h1>Yay!!! 🥰❤️<br>Happy Valentine’s Day, ma belle fleur</h1>
-        <img src="us.jpeg" alt="Us together">
+        <img src="us1.jpeg" alt="Us together">
       `;
     }
   </script>
