--- a/index.html
+++ b/index.html
@@ -100,7 +100,18 @@
 
     function yesClicked() {
       card.innerHTML = `
-        <h1>Yay!!! 🥰❤️<br>Happy Valentine’s Day, ma belle fleur</h1>
+        <p style="
+  font-size: 16px;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 20px;
+">
+  Your good heart is in good hands!!<br><br>
+  You were born to be adored by me. Among billions of faces in this world,
+  it's only your eyes I will ever search for.<br><br>
+  You are my mischief wrapped in kindness, love, devotion, beauty,
+  and soft smooth curves.
+</p>
         <img src="us1.jpeg" alt="Us together">
       `;
     }
