--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   line-height: 1.6;
   color: #444;
   margin-bottom: 20px;
-">
-  Your good heart is in good hands!!<br><br>
+">Yay!!! 🥰❤️<br>
+  Your good heart is in good hands!!<br>
   You were born to be adored by me. Among billions of faces in this world,
-  it's only your eyes I will ever search for.<br><br>
+  it's only your eyes I will ever search for.<br>
   You are my mischief wrapped in kindness, love, devotion, beauty,
   and soft smooth curves.
 </p>
