--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div id="hearts"></div>
 
   <div class="card" id="card">
-    <h1>Stephany,<br>will you be my Valentine? 💖</h1>
+    <h1>forever seems like a long time but I wouldn't mind spending it by your side 💖 <br>will you be my Valentine,<br> Stephany ? 💖</h1>
 
     <div class="buttons">
       <button class="yes" onclick="yesClicked()">Yes 💕</button>
@@ -149,14 +149,12 @@
           line-height: 1.6;
           color: #444;
           margin-bottom: 20px;
-        ">Yay!!! 🥰❤️<br>
-          Your good heart is in good hands!!<br>
-          You were born to be adored by me. Among billions of faces in this world,
-          it's only your eyes I will ever search for.<br>
-          You are my mischief wrapped in kindness, love, devotion, beauty,
-          and soft smooth curves.
+        ">🥰❤️<br>
+          Whatever our souls are made of, yours and mine are the same.<br>
+          You were born to be adored by me.<br>
+          Here's to the intention of being your always and forever.
         </p>
-        <img src="us1.jpeg" alt="Us together">
+        <img src="cheers-fireworks.gif" alt="Us together">
       `;
     }
   </script>
